So manny cool features!

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 flask
+openai
+python-dotenv
+werkzeug
+# Optional: For Google Docs integration (uncomment if needed)
+# google-api-python-client>=2.0.0
+# google-auth-httplib2>=0.1.0
+# google-auth-oauthlib>=0.5.0
