--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask
 openai
 python-dotenv
-werkzeug
+markdown
 # Optional: For Google Docs integration (uncomment if needed)
 # google-api-python-client>=2.0.0
 # google-auth-httplib2>=0.1.0
